SERVER-78662 Add timeout to MODE_X lock acquisition in index build

(cherry picked from commit 34d2cd582b02e49ace9f1c91033280035571d5cc)

GitOrigin-RevId: 0a3e0dd22b719026142d6ae1c418a7cb54807621